--- a/uaclient/mainwindow_ui.ui
+++ b/uaclient/mainwindow_ui.ui
@@ -127,7 +127,7 @@
         <enum>Qt::StrongFocus</enum>
        </property>
        <property name="sizeAdjustPolicy">
-        <enum>QAbstractScrollArea::AdjustToContents</enum>
+        <enum>QAbstractScrollArea::AdjustIgnored</enum>
        </property>
        <property name="editTriggers">
         <set>QAbstractItemView::AllEditTriggers</set>
