add expand/collapse all under a node
This feature adds the ability for a user to expand/collapse all of the
nodes underneth it along with all of its nodes children, grandchildren,
and so on until all of the children are expanded. It expands per
generation, rather than expanding recursively.

--- a/uaclient/mainwindow_ui.ui
+++ b/uaclient/mainwindow_ui.ui
@@ -30,7 +30,7 @@
       <property name="orientation">
        <enum>Qt::Horizontal</enum>
       </property>
-      <widget class="QTreeView" name="treeView">
+      <widget class="OPCTreeView" name="treeView">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Fixed" vsizetype="Expanding">
          <horstretch>0</horstretch>
@@ -363,6 +363,13 @@
   </action>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
+  <customwidgets>
+  <customwidget>
+   <class>OPCTreeView</class>
+   <extends>QTreeView</extends>
+   <header>uaclient/tree_ui/_opc_tree_view</header>
+  </customwidget>
+ </customwidgets>
  <tabstops>
   <tabstop>addrComboBox</tabstop>
   <tabstop>connectOptionButton</tabstop>
